# mission-impossible-2

./: README.md
attention-video/generator-v1/: flicker.py  mp4ToGif.py
tom-cruise/: README.md  agent.py  demo.py  pyproject.toml  setup.sh  the-plan.md
tom-cruise/mock-survey/: styles.css  tracker.js
tom-cruise/mock-survey/pages/: attention-video.html  consent.html  debrief.html  demographics.html  dictator.html  open-ended.html  opinion.html
tom-cruise/mock_survey/: server.py
tom-cruise/skills/human_typer/: __init__.py  distributions.py  test_distributions.py  test_typer.py  typer.py
tom-cruise/skills/video_solver/: __init__.py  extract_frames.py  read_digits.py  test_extract_frames.py  test_read_digits.py
