[project]
name = "tom-cruise"
version = "0.1.0"
description = "AI browser agent that defeats survey bot detection"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.2.0",
    "anthropic>=0.50.0",
    "aiohttp>=3.11.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["skills"]

[tool.hatch.build.targets.wheel]
packages = ["skills"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
